<?xml version="1.0"?>
<package format="3">
  <name>task_planner</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="yigit.yildirim@bogazici.edu.tr">yigit</maintainer>
  <license>Apache License 2.0</license>

  <!--buildtool_depend>ament_python</buildtool_depend-->
  <buildtool_depend>python3-setuptools</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>task_planner_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
